Bug 144914 - FILESAVE PPTX Interactions placed on shapes are not exported
Summary: FILESAVE PPTX Interactions placed on shapes are not exported
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:7.3.0
Keywords:
Depends on:
Blocks: PPTX-Hyperlink
  Show dependency treegraph
 
Reported: 2021-10-04 12:01 UTC by NISZ LibreOffice Team
Modified: 2025-10-10 03:49 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from PowerPoint with internal hyperlinks on shapes (43.35 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2021-10-04 12:03 UTC, NISZ LibreOffice Team
Details
PPTX-shape-interactions.PNG (130.70 KB, image/png)
2021-10-04 12:03 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-10-04 12:01:44 UTC
Description:
This is a followup to bug 144616
When a PPTX slideshow contains internal hyperlinks placed on shapes used in interactions pointing to the first/last and previous/next etc slides, these are not exported by Impress.

Steps to Reproduce:
1.Open attached file.
2.Save as in PPTX then reload it
3.Start the slideshow and try clicking on the image on each slides

Actual Results:
Hyperlinks were not exported so nothing happens.
These should be editable in the right click menu – Interactions dialog, which also indicates there is nothing associated to the shapes.

Expected Results:
Clicking the shape on the first slide should take to the last slide.
Clicking the shape on the second slide should take to the next slide.
Clicking the shape on the third slide should take to the previous slide.
Clicking the shape on the fourth slide should take to the second slide.
Clicking the shape on the fifth slide should take to the first slide.
Clicking the shape on the sixth slide should end the slideshow.
Clicking the shape on the seventh slide should take to the last viewed slide


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 770dcb1f717d576facf31efed14bee403e1a7155
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2021-10-04 12:03:39 UTC
Created attachment 175498 [details]
Example file from PowerPoint with internal hyperlinks on shapes
Comment 2 NISZ LibreOffice Team 2021-10-04 12:03:58 UTC
Created attachment 175499 [details]
PPTX-shape-interactions.PNG
Comment 3 Commit Notification 2021-11-03 14:02:16 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4bfe8304a5600e236043e4ad7c6dc75fd05c937b

tdf#144914 PPTX export: fix interactions and hyperlinks on shapes

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 NISZ LibreOffice Team 2021-11-08 09:05:41 UTC
Verified in: 

Version: 7.3.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 73334560b2dd2d60ac58d2cc2b1a5295490b03e1
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded