tdf#144914 PPTX export: fix interactions and hyperlinks on shapes

Follow-up to commit 83d92437e05a9ec872d9303953fa408dd4dcbcde
"tdf#144616 PPTX import: fix hyperlinks on shapes"

Change-Id: I56538da8d97e052af03c78e8d7eaa16c5c2fde1e